[package]
name = "m-site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.8"
hyper = { version = "1.2.0", features = ["full"] }
tokio ={ version = "1.36.0", features = ["full"] }
tower = "0.4.13"
mime = "0.3.17"
serde ={ version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tracing = "0.1.40"
tracing-subscriber ={ version = "0.3.8", features = ["env-filter"] }
anyhow = "1.0.81"
thiserror = "1.0.58"
